# nursor-flutter-app

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build-release.yml
cache/config/: nursor-user-door@@DEFAULT_GROUP@@5afe4eb9-d3ee-4b37-a072-7ea04421467a
lib/: main.dart
lib/app/: init.dart  main_window.dart
lib/app/common/: constant.dart  hover_image.dart
lib/app/data/: action_res.dart  user.dart  version_dto.dart
lib/app/modules/home/controllers/: home_controller.dart
lib/app/modules/home/views/: customer_button_painter.dart  home_view.dart  plan_status.dart
lib/app/modules/login/controllers/: login_controller.dart
lib/app/modules/login/views/: login_view.dart
lib/app/modules/need_update/bindings/: need_update_binding.dart
lib/app/modules/need_update/controllers/: need_update_controller.dart
lib/app/modules/need_update/views/: need_update_view.dart
lib/app/modules/permissiondeny/bindings/: permissiondeny_binding.dart
lib/app/modules/permissiondeny/controllers/: permissiondeny_controller.dart
lib/app/modules/permissiondeny/views/: permissiondeny_view.dart
lib/app/modules/settings/controllers/: settings_controller.dart
lib/app/modules/settings/views/: settings_view.dart
lib/app/modules/welcome_page/controllers/: welcome_page_controller.dart
lib/app/modules/welcome_page/views/: welcome_page_view.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/app/service/: animate_service.dart  app_service.dart  auth_service.dart  permission_service.dart  sqlite_manager.dart  version_service.dart
lib/app/service/connection/: BaseConnect.dart  auth_connect.dart  inner_connect.dart
lib/app/utils/: cryptutils.dart  logger.dart  theme.dart  tray_manager.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile  copy_libs.sh
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  RunnerDebug.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
native/nursorcore/: README.md  ffigen.yaml  pubspec.yaml
native/nursorcore/example/: README.md  pubspec.yaml
native/nursorcore/example/integration_test/: plugin_integration_test.dart
native/nursorcore/example/lib/: main.dart
native/nursorcore/example/linux/: CMakeLists.txt
native/nursorcore/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
native/nursorcore/example/linux/runner/: my_application.cc
native/nursorcore/example/macos/Flutter/: GeneratedPluginRegistrant.swift
native/nursorcore/example/macos/Runner.xcodeproj/: project.pbxproj
native/nursorcore/example/test/: widget_test.dart
native/nursorcore/example/windows/: CMakeLists.txt
native/nursorcore/lib/: nursorcore.dart  nursorcore_method_channel.dart  nursorcore_platform_interface.dart  xpc_service.dart
native/nursorcore/lib/ffi/: nursorcoreffi.dart
native/nursorcore/lib/model/: action.dart  response.dart
native/nursorcore/linux/: CMakeLists.txt  nursorcore_plugin.cc  nursorcore_plugin_private.h
native/nursorcore/linux/test/: nursorcore_plugin_test.cc
native/nursorcore/macos/: nursorcore.podspec
native/nursorcore/macos/Classes/: NursorCoreServiceProtocol.swift  NursorXpcPlugin.swift  NursorcorePlugin.swift
native/nursorcore/native/: CreateAdminShortcut.bat
native/nursorcore/src/: CMakeLists.txt  nursor-core-amd64.h
native/nursorcore/test/: nursorcore_method_channel_test.dart  nursorcore_test.dart
native/nursorcore/windows/: CMakeLists.txt  nursorcore_plugin.cpp  nursorcore_plugin.h  nursorcore_plugin_c_api.cpp
native/nursorcore/windows/include/nursorcore/: nursorcore_plugin_c_api.h
native/nursorcore/windows/test/: nursorcore_plugin_test.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+9 files in other folders)
